Findbugs fixes